--- a/front-end/package.json
+++ b/front-end/package.json
@@ -50,6 +50,7 @@
     "@types/styled-components": "^5.1.25",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3.1.4"
   }
 }
