--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "openmobile": "node ./node_modules/openmobile/ip.js"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.25",
     "autoprefixer": "^10.4.7",
+    "openmobile": "^1.0.0",
     "postcss": "^8.4.14",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.1.4"
